HDIV CHANGELOG
==============
http://www.hdiv.org

Release 2.1.4
==================================

 * Use request method to define StartPages (https://github.com/hdiv/hdiv/issues/5).

Release 2.1.3
==================================

 * avoidValidationInUrlsWithoutParams only affects to link urls.
 * Absolute URLs are returned as absolute URLs in LinkUrlProcessor.
 * RequestDataValueProcessor for Grails applications.

Release 2.1.2
==================================

 * Confidential values are visible in the log.
 * Expose form state id to request. Simpler Ajax support.
 * Fixed (https://github.com/hdiv/hdiv/issues/3) error parsing parameters without value
 * Fixed (https://github.com/hdiv/hdiv/issues/4) bug with nested tags

Release 2.1.1
==================================

 * New 'debugMode' configuration mode to log the attacks but don`t stop it.
 * Register and use a group of editable validations by default (Sql injection, exec command and XSS attacks).
 * Add "registerDefaults" attribute to <hdiv:editableValidations> element to enable/disable default editable validations.
 * Add "enableDefaults" attribute to <hdiv:validationRule> element to enable/disable default editable validations per rule.
 * Make possible to update a existing state. Designed for ajax requests that update part of the page.
 * New 'maxPagesPerSession' configuration attribute to control the number of states in session.
 
Release 2.1.0
==================================

 * JavaDoc and License correction.

Release 2.1.0.RC3
==================================

 * Final Spring Framework 3.1.0 version support.
 * Configurable IUserData instance in the scheme.
 * Better support for anchored urls.
 * Refactor of the url splitting and processing classes. 

Release 2.1.0.RC2
==================================

 * Hdiv schema for simpler configuration.

Release 2.1.0.RC1
==================================

------- New Features -------

 * Support for JSF 1.2
 * Support for JSF 2.0
 