@@ -1,5 +1,5 @@
 /**
- * Copyright 2005-2011 hdiv.org
+ * Copyright 2005-2012 hdiv.org
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,13 +15,8 @@
  */
 package org.hdiv.web.validator;
 
-import java.util.Hashtable;
-
-import org.hdiv.util.Constants;
-import org.hdiv.util.HDIVErrorCodes;
 import org.springframework.validation.Errors;
 import org.springframework.validation.Validator;
-import org.springframework.web.context.request.RequestContextHolder;
 
 /**
  * Validation to visualize the errors produced in the editable fields detected by HDIV.
@@ -30,75 +25,32 @@ import org.springframework.web.context.request.RequestContextHolder;
  * @author Gotzon Illarramendi
  * @since HDIV 2.0.6
  */
-public class EditableParameterValidator implements Validator {
+public class EditableParameterValidator extends AbstractEditableParameterValidator implements Validator {
 
-	public boolean supports(Class<?> arg0) {
+	/**
+	 * Wrapped validator.
+	 */
+	private Validator innerValidator;
+
+	public boolean supports(Class<?> clazz) {
 		return true;
 	}
 
 	public void validate(Object obj, Errors errors) {
-		validateEditableParameters(obj, errors);
-	}
+		super.validateEditableParameters(errors);
 
-	/**
-	 * Obtains the errors from request detected by HDIV during the validation process of the editable parameters.
-	 * 
-	 * @param formObject
-	 *            form object
-	 * @param errors
-	 *            errors detected by HDIV during the validation process of the editable parameters.
-	 */
-	@SuppressWarnings("unchecked")
-	public void validateEditableParameters(Object formObject, Errors errors) {
-
-		Hashtable<String, String[]> editableParameters = (Hashtable<String, String[]>) RequestContextHolder
-				.getRequestAttributes().getAttribute(HDIVErrorCodes.EDITABLE_PARAMETER_ERROR, 0);
-		if (editableParameters != null && editableParameters.size() > 0) {
-
-			for (String currentParameter : editableParameters.keySet()) {
-
-				String[] currentUnauthorizedValues = editableParameters.get(currentParameter);
-
-				if ((currentUnauthorizedValues.length == 1)
-						&& (currentUnauthorizedValues[0].equals(Constants.HDIV_EDITABLE_PASSWORD_ERROR_KEY))) {
-
-					errors.rejectValue(currentParameter, Constants.HDIV_EDITABLE_PASSWORD_ERROR_KEY);
-
-				} else {
-					String printedValue = this.createMessageError(currentUnauthorizedValues);
-					errors.rejectValue(currentParameter, Constants.HDIV_EDITABLE_ERROR_KEY,
-							new String[] { printedValue }, printedValue + " has not allowed characters");
-				}
-			}
+		// If Hdiv validation OK, delegate to inner validation
+		if (!errors.hasErrors() && this.innerValidator != null) {
+			this.innerValidator.validate(obj, errors);
 		}
 	}
 
 	/**
-	 * It creates the message error from the values <code>values</code>.
-	 * 
-	 * @param values
-	 *            values with not allowed characters
-	 * @return message error to show
+	 * @param innerValidator
+	 *            the innerValidator to set
 	 */
-	public String createMessageError(String[] values) {
-
-		StringBuffer printedValue = new StringBuffer();
-
-		for (int i = 0; i < values.length; i++) {
-
-			if (i > 0) {
-				printedValue.append(", ");
-			}
-			if (values[i].length() > 20) {
-				printedValue.append(values[i].substring(0, 20) + "...");
-			} else {
-				printedValue.append(values[i]);
-			}
-			if (printedValue.length() > 20) {
-				break;
-			}
-		}
-		return printedValue.toString();
+	public void setInnerValidator(Validator innerValidator) {
+		this.innerValidator = innerValidator;
 	}
 
 }
